--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .grid {
     display: grid;
     background: blue;
@@ -5,6 +13,7 @@
     height: 500px;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(10, 1fr);
+    margin: 0 15px 0 15px;
 }
 
 .grid > div {
