--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
 body {
     width: 100vw;
     height: 100vh;
+    padding: 0;
+    margin: 0;
+}
+
+.game-area {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-around;
+    align-content: center;
+    width: 100vw;
+    height: 100vh;
+    margin-top: 2%;
 }
 
 .grid {
@@ -13,7 +21,6 @@ body {
     height: 500px;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(10, 1fr);
-    margin: 0 15px 0 15px;
 }
 
 .grid > div {
@@ -29,4 +36,17 @@ h1:nth-child(1){
 }
 h1:nth-child(2){
     margin-left: 200px
+}
+
+.winner-display {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.416);
+    top: 0;
+    transform: translateY(-5%);
+    color: white;
+    font-size: 15vw;
+    visibility: hidden;
+    transition: 1s;
 }
